[gd_scene load_steps=8 format=2]

[ext_resource path="res://square.svg" type="Texture" id=1]
[ext_resource path="res://circle.svg" type="Texture" id=2]
[ext_resource path="res://SKButton/Ubuntu Mono Nerd Font Complete.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://SKButton/ring.svg" type="Texture" id=4]
[ext_resource path="res://SKButton/StatusButton.gd" type="Script" id=5]

[sub_resource type="DynamicFont" id=3]
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=2]
font_data = ExtResource( 3 )

[node name="StatusButton" type="TextureProgress"]
margin_right = 82.0
margin_bottom = 82.0
max_value = 1000.0
value = 100.0
texture_under = ExtResource( 4 )
texture_progress = ExtResource( 4 )
fill_mode = 4
tint_under = Color( 0, 0, 0, 1 )
script = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Skill" type="TextureProgress" parent="."]
margin_left = 6.0
margin_top = 6.0
margin_right = 88.0
margin_bottom = 88.0
rect_scale = Vector2( 0.85, 0.85 )
max_value = 1000.0
texture_progress = ExtResource( 2 )
fill_mode = 4
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button" type="TextureButton" parent="Skill"]
margin_left = -7.05882
margin_top = -7.05882
margin_right = 74.9412
margin_bottom = 74.9412
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Value" type="Label" parent="."]
self_modulate = Color( 0, 0, 0, 1 )
margin_left = 18.0
margin_top = -20.0
margin_right = 58.0
margin_bottom = -3.0
rect_scale = Vector2( 1.17, 1.17 )
custom_fonts/font = SubResource( 3 )
text = "99:99"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ValueBG" type="Sprite" parent="Value"]
position = Vector2( 20.0791, 8.54701 )
scale = Vector2( 0.489733, 0.214 )
z_index = -1
texture = ExtResource( 1 )

[node name="ShortCut" type="TextureProgress" parent="."]
margin_left = -5.0
margin_top = 65.0
margin_right = 15.0
margin_bottom = 85.0
rect_scale = Vector2( 0.25, 0.25 )
texture_under = ExtResource( 2 )
texture_progress = ExtResource( 2 )
fill_mode = 4
tint_under = Color( 1, 1, 1, 0.498039 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="ShortCut"]
modulate = Color( 0, 0, 0, 1 )
margin_right = 21.0
margin_bottom = 21.0
rect_scale = Vector2( 4, 4 )
custom_fonts/font = SubResource( 2 )
text = "A"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="button_down" from="Skill/Button" to="." method="_on_button_down"]
[connection signal="button_up" from="Skill/Button" to="." method="_on_button_up"]
